@@ -403,6 +403,7 @@ __ZN3WTF12AtomicString3addEPKh
 __ZN3WTF12AtomicString3addEPKt
 __ZN3WTF12AtomicString3addEPKtj
 __ZN3WTF12AtomicString3addEPKtjj
+__ZN3WTF12AtomicString3addEPNS_10StringImplEjj
 __ZN3WTF12AtomicString4findEPKtjj
 __ZN3WTF12AtomicString4initEv
 __ZN3WTF12createThreadEPFPvS0_ES0_
