@@ -1,3 +1,10 @@
+2012-01-23  Andy Estes  <aestes@apple.com>
+
+        Fix the build after r105635.
+
+        * TestWebKitAPI/Tests/WTF/StringBuilder.cpp:
+        (TestWebKitAPI::TEST):
+
 2012-01-23  Xianzhu Wang  <wangxianzhu@chromium.org>
 
         Basic enhancements to StringBuilder
